# VirusBlock

./: .gitignore  AGENTS.md  BUILD_INFO.txt  NeuralV-3.plugin  NeuralV.plugin  NeuralV.py  README.md  gradle.properties  gradlew  gradlew.bat  index.html  manifest.json  security-baseline.md  settings-desktop.gradle.kts  settings.gradle.kts
.github/workflows/: android-build.yml  build.yml  linux-build.yml  linux-cli-build.yml  windows-build.yml
app/: build.gradle.kts
assets/: index-7MSwIto_.js  index-Boboi5TM.css
desktop-app/: build.gradle.kts
downloads/telegram/: NeuralV-3.plugin  NeuralV.py
gradle/: libs.versions.toml
install/: linux.sh  neuralv.cmd  neuralv.ps1  nv.ps1
media/story/: platforms-poster.avif  privacy-poster.avif
nv/: app.css  app.js  index.html
nv/downloads/: index.html
nv/profile/: index.html
shell/: README.md  go.mod
shell/install/: linux.sh  nv.sh
shield-backend/: .env.example  README.md  package-lock.json  package.json
shield-backend/scripts/: analyze_apk.py  schema.sql  setup.sh
shield-backend/src/: index.js
shield-backend/test/: desktopScanHeuristics.contract.test.js
windows-native/: CMakeLists.txt
windows-native/include/NeuralV/: ApiClient.h  Config.h.in  JsonLite.h
windows-native/install/: windows.cmd  windows.ps1
windows-native/setup/: NeuralV.iss  SetupMain.cpp
windows-native/src/: ApiClient.cpp  SessionStore.cpp  Theme.cpp  main.cpp
windows-winui/NeuralV.CliHost/: NeuralV.CliHost.csproj
windows-winui/NeuralV.Cmd/: NeuralV.Cmd.csproj  Program.cs
windows-winui/NeuralV.Launcher/: NeuralV.Launcher.csproj  Program.cs
windows-winui/NeuralV.Setup/: NeuralV.Setup.csproj
windows-winui/NeuralV.Shared/: InstallLayout.cs  (+5 more)
(+200 files in other folders)
